--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,10 @@ body {
 }
 
 .main {
-  background-color: #FEFEFE;
+  background-color: #0A0A0A;
   min-height: 100vh;
   width: 100%;
-  color: #0A0A0A;
+  color: #FEFEFE;
 }
 
 .flex {
@@ -65,7 +65,11 @@ body {
 }
 
 .color3 {
-  color: #585757;
+  color: #CC2839;
+}
+
+.color4 {
+  color: #ED7120;
 }
 
 
@@ -78,11 +82,11 @@ body {
 }
 
 .bg3 {
-  background-color: #e0e0ed;
+  background-color: #CC2839;
 }
 
 .bg4 {
-  background-color: #F6F6F8;
+  background-color: #ED7120;
 }
 
 .no-bg {
@@ -98,7 +102,7 @@ body {
 }
 
 .red {
-  color: red;
+  color: #CC2839;
 }
 
 .blue {
@@ -126,7 +130,7 @@ body {
 }
 
 .border2 {
-  border: 1px solid #0a0a0a;
+  border: 1px solid #ED7120;
 }
 
 .border3 {
@@ -154,7 +158,7 @@ body {
 }
 
 .border-red {
-  border: 1px solid red;
+  border: 1px solid #CC2839;
 }
 
 .border-green {
@@ -172,9 +176,11 @@ body {
 .padding {
   padding: 1em;
 }
+
 .relative {
   position: relative;
 }
+
 /*  */
 .black-out {
   position: absolute;
@@ -271,6 +277,8 @@ body {
   .page-title {
     font-size: 4.5em;
     line-height: 80px;
+    width: 80vw;
+    margin: 0 auto;
   }
 
   .page-subtitle {
@@ -291,5 +299,3 @@ body {
     font-size: 5em;
   }
 }
-
-
