--- a/src/STYLESHEETS/About.css
+++ b/src/STYLESHEETS/About.css
@@ -15,7 +15,15 @@
     }
 
     .about-img {
-        background-image: url('../PHOTOS/shop.jpg');
+        background-image: url('../PHOTOS/barber3.jpeg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 30vh;
+        width: 100%;
+    }
+    .about-img2 {
+        background-image: url('../PHOTOS/barber2.jpeg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -25,7 +33,7 @@
 
     .about-sub {
         font-size: 2.2em;
-        letter-spacing: -2px;
+        letter-spacing: -1px;
         padding: 0.5em 0;
         font-weight: 400;
     }
@@ -57,6 +65,9 @@
     .about-img {
         height: 40vh;
     }
+    .about-img2 {
+        height: 40vh;
+    }
 
 }
 
@@ -65,6 +76,9 @@
         letter-spacing: -2px;
     } */
     .about-img {
+        height: 45vh;
+    }
+    .about-img2 {
         height: 45vh;
     }
 }
@@ -78,10 +92,13 @@
 
     .about-sub {
         font-size: 3em;
-        letter-spacing: -4px;
+        letter-spacing: -2px;
     }
 
     .about-img {
+        height: 55vh;
+    }
+    .about-img2 {
         height: 55vh;
     }
     .about-section p {
