--- a/src/STYLESHEETS/Contact.css
+++ b/src/STYLESHEETS/Contact.css
@@ -41,8 +41,7 @@
     }
 
     .contact-pair label {
-        letter-spacing: -1px;
-        font-size: 0.9em;
+        font-size: 1em;
         font-weight: 300;
         margin-top: 0.5em;
     }
@@ -87,7 +86,7 @@
 
     .contact-method {
         display: flex;
-        font-size: 1em;
+        font-size: 1.2em;
         font-weight: 300;
         align-items: center;
         gap: 0.6em;
@@ -100,6 +99,7 @@
 
     .contact-right img {
         width: 100%;
+        object-fit: cover;
     }
     .contact-left button {
         width: 100%;
