--- a/src/STYLESHEETS/Footer.css
+++ b/src/STYLESHEETS/Footer.css
@@ -17,22 +17,26 @@
         text-align: center;
         display: block;
     }
+
     footer h1 {
-        font-size: 1.4em;
+        font-size: 1.6em;
         letter-spacing: -1px;
         font-weight: 600;
         text-align: left;
     }
+
     .footer-desc {
-        font-size: 0.9em;
+        font-size: 1em;
         text-align: left;
         font-weight: 300;
         padding: 0.6em 0;
     }
+
     .footer-bottom {
         display: flex;
         flex-direction: column;
     }
+
     .socials {
         padding: 0.8em;
         display: flex;
@@ -40,15 +44,18 @@
         width: 60vw;
         margin: 0 auto;
     }
+
     .social-link {
         font-size: 2.5em;
     }
+
     .footer-links {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
         padding: 0.8em;
+        row-gap: 1em;
     }
+
     .footer-link {
         text-decoration: none;
         font-size: 1.2em;
@@ -58,34 +65,43 @@
 
 @media only screen and (min-width: 600px) {
     .footer-desc {
-        width: 60vw;
+        width: 80vw;
     }
+
     .footer-bottom {
         display: flex;
         flex-direction: unset;
         justify-content: space-between;
-        align-items: center;
+        align-items: baseline;
     }
+
     .socials {
         width: fit-content;
         justify-content: center;
         gap: 0.8em;
         right: 0;
     }
+
     .social-link {
-        font-size: 1.8em;
+        font-size: 3em;
     }
+
     .footer-copy {
         width: 100%;
         text-align: left;
     }
-    
+
+    .footer-links {
+        grid-template-columns: repeat(6, 1fr);
+    }
+
 }
 
 @media only screen and (min-width: 800px) {
     .footer-desc {
         width: 40vw;
     }
+
     .footer-links {
         display: flex;
         justify-content: left;
@@ -96,7 +112,13 @@
 @media only screen and (min-width: 1000px) {}
 
 @media only screen and (min-width: 1200px) {
+    .footer-bottom {
+        padding: 0;
+    }
     .footer-desc {
         width: 30vw;
+    }
+    .social-link {
+        font-size: 3em;
     }
 }
