--- a/src/STYLESHEETS/Services.css
+++ b/src/STYLESHEETS/Services.css
@@ -55,13 +55,10 @@
     }
 
     .service-img {
-        background-image: url('../PHOTOS/shop.jpg');
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
         height: 200px;
         width: 100%;
-        margin-bottom: 0.8em;
+        object-fit: cover;
+        object-position: center;
     }
 }
 
