--- a/src/STYLESHEETS/ScheduleAdmin.css
+++ b/src/STYLESHEETS/ScheduleAdmin.css
@@ -27,6 +27,7 @@
         padding: 1em;
         font-family: 'Roboto', sans-serif;
         font-size: 1em;
+        border-radius: 10px;
     }
 
     .schedule-admin-eve {
@@ -70,8 +71,10 @@
 
     .schedule-admin-create {
         margin-top: 2vh;
-        font-size: 1.2em;
-        text-decoration: underline;
+        font-size: 1em;
+        border-radius: 10px;
+        padding: 1em;
+        width: 100%;
     }
 
     .schedule-admin-create:hover {
@@ -86,33 +89,41 @@
         height: 100vh;
         width: 100vw;
         z-index: 100;
+        overflow-y: scroll;
     }
+
     .schedule-admin-form-wrap {
-        display: block;
         padding: 1em;
         max-width: 450px;
         margin: 2em auto
     }
+
     .schedule-admin-form-wrap h1 {
         font-size: 1.5em;
         font-weight: 400;
         line-height: 25px;
     }
+
     .schedule-admin-form-pair {
         display: grid;
         grid-template-columns: 1fr;
         gap: 0.2em;
     }
+
     .schedule-admin-form-pair label {
         font-size: 0.9em;
     }
+
     .schedule-admin-form-pair input {
+        -webkit-appearance: none;
+        -moz-appearance: none;
         padding: 0.8em;
         margin-bottom: 0.6em;
         font-family: 'Roboto', sans-serif;
         font-size: 1em;
         width: 100%;
     }
+
     .schedule-admin-form-pair textarea {
         padding: 0.8em;
         margin-bottom: 0.6em;
@@ -120,32 +131,93 @@
         font-size: 1em;
         min-height: 120px;
     }
+
     .split {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 1em;
     }
+
     .big-split {
         display: grid;
         grid-template-columns: 3fr 1fr;
         gap: 1em;
     }
+
     .schedule-admin-form-btn {
         width: 100%;
         padding: 1em;
         font-family: 'Roboto', sans-serif;
         font-size: 1em;
     }
+
     .schedule-xmark {
         font-size: 5em;
+    }
+
+    .schedule-admin-btns {
+        width: 320px;
+    }
+
+    .appt-types-wrap {
+        position: fixed;
+        overflow-y: scroll;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        padding: 1em;
+    }
+
+    .appt-types {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 0.5em;
+        padding: 1em 0;
+    }
+
+    .appt-types button {
+        width: 100%;
+        padding: 0.8em;
+        font-size: 1em;
+    }
+
+    .appt-types-top {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0.2em 0;
+    }
+
+    .appt-types-top h1 {
+        font-size: 1.5em;
+        letter-spacing: -1px;
+        font-weight: 500;
+    }
+
+    .appt-types-wrap p {
+        font-size: 0.9em;
+    }
+
+    .appt-types-x {
+        font-size: 2em;
     }
 }
 
 @media only screen and (min-width: 600px) {
     .schedule-admin-form-wrap {
-        display: block;
         width: 450px;
-        margin: 2em auto;
+    }
+
+    .appt-types-wrap {
+        display: block;
+        left: 0;
+        right: 0;
+        width: 450px;
+        margin: 0em auto;
+        height: 100vh;
+        overflow-y: scroll;
     }
 }
 
@@ -167,7 +239,6 @@
     }
 
     .schedule-admin-wrap {
-        display: block;
         max-height: 60vh;
         overflow-y: scroll;
         min-height: 60vh;
