--- a/src/STYLESHEETS/Home.css
+++ b/src/STYLESHEETS/Home.css
@@ -21,19 +21,16 @@
         padding: 1em;
     }
     .home-panel1-img {
-        background-image: url('../PHOTOS/barber1.jpeg');
-        height: 45vh;
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
+        object-fit: cover;
+        width: 100%;
+        height: 40vh;
         margin-top: 1em;
     }
     .home-panel1-img-right {
-        background-image: url('../PHOTOS/barber2.jpeg');
         height: 30vh;
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
+        object-fit: cover;
+        width: 100%;
+        height: 40vh;
         margin-top: 1em;
     }
     .home-panel1-right-info {
